# fox61850

./: .gitignore  README.md
buffer/: CLI.py  smart_substation  smart_substation.c
buffer/parameters/: goParameters.csv
buffer/scd/notUsed/: PROT_BAR.scd  PROT_BAR_20221101.scd
config/: stack_config.h
mms/: Makefile  TESTparser.py  smart_substation  smart_substation.c  smart_substationORIG.c
mms/parameters/: svParametersORIG.csv
mms/scd/notUsed/: P444_MCL02.CID
smart_substation/: CMakeLists.txt  Makefile  smart_substation  smart_substation.c
smart_substation - fasorial/: README.md  smart_substation  smart_substation.c
smart_substation - fasorial/parameters/Backup/: goParameters2.csv  svParameters2.csv
smart_substation - multi thread/: CLI.py  CLIORIG.py  Makefile  smart_substation  smart_substation.c  test.py
smart_substation - multi thread/parameters/: goParameters2.csv
smart_substation - multi thread/scd/notUsed/: IECstation.scd
smart_substation/parameters/: goParameters2.csv  svParameters.csv  svParameters2.csv
smart_substation/scd/notUsed/: PROT_BAR_TEMPLATE.scd
